--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 *.ll
 __pycache__
+
+
+# Added by cargo
+
+/target
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
